[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.3.1"
solana-program = "1.18.5"


#solana-install init 1.18.0
#cargo build-sbf
#solana program deploy target/deploy/contract.so
[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
